// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSwitcher /> Applications without a name should not be renderered should render correctly 1`] = `
<div>
  <div
    class="HvAppSwitcher-root-247 HvAppSwitcher-single-248 HvAppSwitcher-open-252"
  >
    <span
      class="HvAppSwitcher-title-253 HvTypography-root-274 HvTypography-highlightText-286"
      data-mui-internal-clone-element="true"
    >
      Mock title
    </span>
    <ul
      class="HvAppSwitcher-actionsContainer-254 HvListContainer-root-296"
    >
      <li
        class="HvAppSwitcherAction-root-297 HvAppSwitcher-item-256 HvListItem-root-305 HvListItem-interactive-307 HvFocus-root-316 HvFocus-focusDisabled-319"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography-300 HvTypography-root-274 HvTypography-normalText-287"
          href="http://mockapp1/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon-301 HvAppSwitcher-itemIcon-260"
          >
            <img
              alt="Mock App 1 Description"
              class="HvAppSwitcherAction-iconUrl-304"
              src="http://mockapp1/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title-302 HvAppSwitcher-itemTitle-261 HvTypography-root-274 HvTypography-highlightText-286"
            data-mui-internal-clone-element="true"
          >
            Mock App 1 - VALID
          </span>
          <div
            class=""
            data-mui-internal-clone-element="true"
          >
            <div
              aria-label="Mock App 1 Description"
              class="HvAppSwitcherAction-iconInfo-303 HvIconBase-root-324 HvIconBase-s-326"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </a>
      </li>
      <li
        class="HvAppSwitcherAction-root-297 HvAppSwitcher-item-256 HvListItem-root-305 HvListItem-interactive-307 HvFocus-root-316 HvFocus-focusDisabled-319"
        tabindex="-1"
      >
        <button
          class="HvAppSwitcherAction-typography-300 HvTypography-root-274 HvTypography-normalText-287"
          style="border-color: #414141;"
          tabindex="0"
        >
          <div
            class="HvAppSwitcherAction-icon-301 HvAppSwitcher-itemIcon-260"
          >
            <img
              alt="Mock App 3 Description"
              class="HvAppSwitcherAction-iconUrl-304"
              src="http://mockapp3/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title-302 HvAppSwitcher-itemTitle-261 HvTypography-root-274 HvTypography-highlightText-286"
            data-mui-internal-clone-element="true"
          >
            Mock App 3
          </span>
          <div
            class=""
            data-mui-internal-clone-element="true"
          >
            <div
              aria-label="Mock App 3 Description"
              class="HvAppSwitcherAction-iconInfo-303 HvIconBase-root-324 HvIconBase-s-326"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </button>
      </li>
      <li
        class="HvAppSwitcherAction-root-297 HvAppSwitcher-item-256 HvListItem-root-305 HvListItem-interactive-307 HvFocus-root-316 HvFocus-focusDisabled-319"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography-300 HvTypography-root-274 HvTypography-normalText-287"
          href="http://mockapp5/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon-301 HvAppSwitcher-itemIcon-260"
          >
            <img
              class="HvAppSwitcherAction-iconUrl-304"
              src="http://mockapp5/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title-302 HvAppSwitcher-itemTitle-261 HvTypography-root-274 HvTypography-highlightText-286"
            data-mui-internal-clone-element="true"
          >
            Mock App 5 - VALID without description
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<AppSwitcher /> with minimum configuration should render correctly 1`] = `
<div>
  <div
    class="HvAppSwitcher-root-1 HvAppSwitcher-single-2 HvAppSwitcher-open-6"
  >
    <span
      class="HvAppSwitcher-title-7 HvTypography-root-28 HvTypography-highlightText-40"
      data-mui-internal-clone-element="true"
    >
      Mock title
    </span>
    <ul
      class="HvAppSwitcher-actionsContainer-8 HvListContainer-root-50"
    >
      <li
        class="HvAppSwitcherAction-root-51 HvAppSwitcher-item-10 HvListItem-root-59 HvListItem-interactive-61 HvFocus-root-70 HvFocus-focusDisabled-73"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography-54 HvTypography-root-28 HvTypography-normalText-41"
          href="http://mockapp1/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon-55 HvAppSwitcher-itemIcon-14"
          >
            <img
              class="HvAppSwitcherAction-iconUrl-58"
              src="http://mockapp1/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title-56 HvAppSwitcher-itemTitle-15 HvTypography-root-28 HvTypography-highlightText-40"
            data-mui-internal-clone-element="true"
          >
            Mock App 1
          </span>
        </a>
      </li>
      <li
        class="HvAppSwitcherAction-root-51 HvAppSwitcher-item-10 HvListItem-root-59 HvListItem-interactive-61 HvFocus-root-70 HvFocus-focusDisabled-73"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography-54 HvTypography-root-28 HvTypography-normalText-41"
          href="http://mockapp2/"
          style="border-color: #414141;"
          tabindex="0"
          target="_blank"
        >
          <div
            class="HvAppSwitcherAction-icon-55 HvAppSwitcher-itemIcon-14"
          >
            <img
              alt="Mock App 2 Description"
              class="HvAppSwitcherAction-iconUrl-58"
              src="http://mockapp2/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title-56 HvAppSwitcher-itemTitle-15 HvTypography-root-28 HvTypography-highlightText-40"
            data-mui-internal-clone-element="true"
          >
            Mock App 2
          </span>
          <div
            class=""
            data-mui-internal-clone-element="true"
          >
            <div
              aria-label="Mock App 2 Description"
              class="HvAppSwitcherAction-iconInfo-57 HvIconBase-root-78 HvIconBase-s-80"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </a>
      </li>
      <li
        class="HvAppSwitcherAction-root-51 HvAppSwitcher-item-10 HvListItem-root-59 HvListItem-interactive-61 HvFocus-root-70 HvFocus-focusDisabled-73"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography-54 HvTypography-root-28 HvTypography-normalText-41"
          href="http://mockapp2/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon-55 HvAppSwitcher-itemIcon-14"
          >
            <img
              alt="Mock App 2 Description"
              class="HvAppSwitcherAction-iconUrl-58"
              src="http://mockapp2/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title-56 HvAppSwitcher-itemTitle-15 HvTypography-root-28 HvTypography-highlightText-40"
            data-mui-internal-clone-element="true"
          >
            Mock App 3
          </span>
          <div
            class=""
            data-mui-internal-clone-element="true"
          >
            <div
              aria-label="Mock App 2 Description"
              class="HvAppSwitcherAction-iconInfo-57 HvIconBase-root-78 HvIconBase-s-80"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
